<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_login"
    android:orientation="vertical"
    tools:context=".ui.auth.AccediFragment">

    <Button
        android:id="@+id/btnAccediLogIn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="139dp"
        android:background="@drawable/button_orange"
        android:text="@string/accedi"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/custom_input_layput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"

        android:background="@drawable/custom_input_layput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRecupera_password"
        android:layout_width="168dp"
        android:layout_height="30dp"
        android:background="@drawable/button_white"
        android:text="@string/recupera_password"
        android:textColor="@color/colorBackgroundOrange"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <ImageView
        android:id="@+id/image_logo_accedi"
        android:layout_width="396dp"
        android:layout_height="218dp"
        android:src="@drawable/accedi_logo_profilo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtRegistrazione"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:text="@string/non_sei_ancora_registrato"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:background="@drawable/button_white"
        android:text="@string/btn_registrati"
        android:textColor="@color/colorBackgroundOrange"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <ProgressBar
        android:id="@+id/accedi_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnAccediLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAccediLogIn" />


</androidx.constraintlayout.widget.ConstraintLayout>