...
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_main_activity"
    android:orientation="vertical"
    tools:context="com.example.speedmarket.ui.MainActivity">

    <Button
        android:id="@+id/btnAccedi"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="165dp"
...
